--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: moslem_bot
-description: A new Flutter project.
+description: An interactive AI designed to answer your questions about Islam.
 
 version: 1.0.0+1
 
@@ -9,14 +9,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_chat_ui: any
+  uuid: ^4.5.1
+  mongo_dart: ^0.10.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.2
+  flutter_launcher_icons: 0.13.1
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  adaptive_icon_foreground: "assets/icon/icon.png" # Set the foreground image (same or different from image_path)
+  adaptive_icon_background: "#5F8F3C"
+  
 flutter:
   uses-material-design: true
+  generate: true
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
